<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>example_estimator_plugin</name>
  <version>2.0.0</version>

  <description>MRS Example Estimator Plugin</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <license>BSD 3-Clause</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>pluginlib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_uav_managers</depend>
  <depend>mrs_uav_state_estimators</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
