<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>example_sweeping_generator</name>
  <version>2.0.0</version>

  <description>Example Sweeping Generator</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <test_depend>rclcpp</test_depend>
  <test_depend>mrs_msgs</test_depend>
  <test_depend>mrs_lib</test_depend>
  <test_depend>mrs_uav_testing</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
